<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">First Transaction Test</string>
    <string name="add_expense">Add Expense</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="payment_type">Payment Type</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="todo1">TODO</string>
    <string name="title_activity_test_acitivty">TestAcitivty</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="adjust_budget">Adjust Budget</string>
    <string name="add_1expense">Add Expense</string>
    <string name="hi_user">Hi User,</string>
    <string name="balance">Balance:</string>
    <string name="budget">Budget:</string>
    <string name="score">Score:</string>
    <string name="todo">TODO</string>
    <string name="personal_information">Personal Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="reports">Reports</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="years">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>

    <!-- add the client ID to test-->
    <string name="server_client_id">735767199414-26o0pvaj0mp4jsrgq39optt1pkkh7q0j.apps.googleusercontent.com</string>
</resources>